kubernetes/ui-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: myuistatus
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 80
