kubernetes/x-ui-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: myuistatus
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 80
      nodePort: 30860
